<?xml version="1.0"?>
<package format="3">
  <name>ros2_tf2</name>
  <version>0.0.0</version>
  <description>TF2 broadcaster assignment</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

</package>